--- a/btm/btm/btm.csproj
+++ b/btm/btm/btm.csproj
@@ -101,7 +101,9 @@
     <Content Include="signup.aspx" />
     <Content Include="SignUpConfirm.aspx" />
     <Content Include="SongItem.ascx" />
+    <Content Include="Songs\HtmlPage1.html" />
     <Content Include="UpdatePicture.aspx" />
+    <Content Include="Users\HtmlPage1.html" />
     <Content Include="Verify.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -157,10 +159,7 @@
       <DependentUpon>Verify.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Songs\" />
-    <Folder Include="Users\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
